<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp">

    <!-- Form Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_info_title2"
        android:textColor="#000000"
        android:fontFamily="serif"
        android:textSize="18sp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="82dp" />
        <!-- pointrepere et desc -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pointR_label"
                android:textColor="#000000"
                android:fontFamily="serif"
                android:textSize="18sp"
                android:layout_marginBottom="6dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="#FFFFFF"
                app:boxCornerRadiusTopStart="9dp"
                app:boxCornerRadiusTopEnd="9dp"
                app:boxCornerRadiusBottomStart="9dp"
                app:boxCornerRadiusBottomEnd="9dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <EditText
                    android:id="@+id/edit_pointR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pointR_hint"
                    android:inputType="textMultiLine"
                    android:gravity="top|start"
                    android:scrollbars="vertical"
                    android:minLines="4"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_label"
                android:textColor="#000000"
                android:fontFamily="serif"
                android:textSize="18sp"
                android:layout_marginBottom="6dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="#FFFFFF"
                app:boxCornerRadiusTopStart="9dp"
                app:boxCornerRadiusTopEnd="9dp"
                app:boxCornerRadiusBottomStart="9dp"
                app:boxCornerRadiusBottomEnd="9dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <EditText
                    android:id="@+id/edit_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/desc_hint"
                    android:inputType="textMultiLine"
                    android:gravity="top|start"
                    android:scrollbars="vertical"
                    android:minLines="4"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        
       
</LinearLayout>