<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatActivity">

    <!-- Contenu principal -->
    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Header fixe : logo + slogan -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/dashboard_logo"
                android:layout_width="121dp"
                android:layout_height="121dp"
                android:src="@drawable/logo_raptor"
                android:contentDescription="@string/logo_description"
                android:scaleType="centerCrop" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/dashboard_slogan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/slogan_text"
                    android:textColor="#333333"
                    android:fontFamily="serif"
                    android:textSize="18sp"
                    android:gravity="start"
                    android:paddingStart="1dp" />
            </LinearLayout>
            
        </LinearLayout>
        
        <!-- Contenu scrollable -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:background="#FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#A39797"/>

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map_title"
                        android:textColor="#333333"
                        android:fontFamily="serif"
                        android:textSize="18sp"
                        android:gravity="start"
                        android:paddingStart="1dp" />

                    <org.osmdroid.views.MapView
                        android:id="@+id/map"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </RelativeLayout>
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/piechart_title"
                        android:textColor="#333333"
                        android:fontFamily="serif"
                        android:textSize="18sp"
                        android:gravity="start"
                        android:paddingStart="1dp" />

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/pieChart"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"/>

                </LinearLayout>
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/barchart_title"
                        android:textColor="#333333"
                        android:fontFamily="serif"
                        android:textSize="18sp"
                        android:gravity="start"
                        android:paddingStart="1dp" />

                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/barChart"
                        android:layout_width="match_parent"
                        android:layout_height="250dp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">


                    <!-- back (en bas à gauche du bouton) -->
                    <ImageView
                        android:id="@+id/back_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_back"
                        android:contentDescription="Back"
                        android:layout_below="@id/btn_send_mess"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"/>

                    <!-- Logout (en bas à droite du bouton) -->
                    <ImageView
                        android:id="@+id/logout_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_logout"
                        android:contentDescription="Logout"
                        android:layout_below="@id/btn_send_mess"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="16dp"/>
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <!-- Sidebar / Drawer -->
    <LinearLayout
        android:id="@+id/history_drawer"
        android:layout_width="167dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#333333"
        android:layout_gravity="start">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Menu Nouveau -->
            <ImageView
                android:id="@+id/new_icon"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:src="@drawable/ic_new"
                android:contentDescription="New"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical" />

            <!-- Menu Filter -->
            <ImageView
                android:id="@+id/filter_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_filter"
                android:contentDescription="Filter"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_title"
            android:textColor="#BDBDBD"
            android:textSize="18sp"
            android:padding="16dp" />
            
        <!-- Separator for history -->
        <View
            android:layout_width="153dp"
            android:layout_height="1dp"
            android:background="#BDBDBD"
            android:layout_marginStart="4dp"
            android:layout_marginTop="14dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"/>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>